--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
 
 
-add_executable(GP2BaseCode src/main.cpp src/Graphics.cpp include/Common.h include/Graphics.h)
+add_executable(GP2BaseCode src/main.cpp src/Graphics.cpp src/Shader.cpp include/Common.h include/Graphics.h include/Vertex.h include/Shader.h)
 target_link_libraries(GP2BaseCode ${SDL2_LIBRARY} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES})
 include_directories(GP2BaseCode include/ ${OPENGL_INCLUDE_DIRS} ${SDL2_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS})
 
@@ -17,3 +17,5 @@ add_custom_command(TARGET GP2BaseCode POST_BUILD
                    COMMAND ${CMAKE_COMMAND} -E copy_directory
                        ${CMAKE_SOURCE_DIR}/dlls $<TARGET_FILE_DIR:GP2BaseCode>)
 endif (MSVC)
+
+add_custom_command(TARGET GP2BaseCode POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/assets $<TARGET_FILE_DIR:GP2BaseCode>/assets)
